# learnopengl

./: CMakeLists.txt  glad.c  main.cpp  shell.nix
glad/: glad.h
include/: shader.hpp  texture.hpp
shaders/: colorFromVertex.frag  uniformColor.frag  vertex.vert
